force-app/main/default/objects/Lunar_Explorer__c/Lunar_Explorer__c.object-meta.xml
<CustomObject>
    <label>Lunar Explorer</label>
    <pluralLabel>Lunar Explorers</pluralLabel>
    <description>Represents a registered explorer for Lunar Basecamp Outfitters. Stores personal details, EVA experience, certification level, and emergency contact information.</description>
    <nameField>
        <label>Explorer Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>