force-app/main/default/objects/Lunar_Explorer__c/fields/Certification_Level__c.field-meta.xml
<CustomField>
    <fullName>Certification_Level__c</fullName>
    <label>Certification Level</label>
    <type>Picklist</type>
    <description>The explorer&apos;s highest lunar activity certification level, determining which expedition types they are eligible to join.</description>
    <inlineHelpText>Select the highest certification level this explorer has achieved. Determines eligible expedition types.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novice Crater Walker</fullName>
                <default>true</default>
                <label>Novice Crater Walker</label>
            </value>
            <value>
                <fullName>Advanced Lava Tube Explorer</fullName>
            </value>
            <value>
                <fullName>Master Lunar Alpinist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>