force-app/main/default/objects/Lunar_Explorer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
    <description>Primary email address for the lunar explorer used for booking confirmations and safety briefings.</description>
    <inlineHelpText>Enter the explorer&apos;s primary email address for communications and booking notifications.</inlineHelpText>
</CustomField>