force-app/main/default/objects/Lunar_Explorer__c/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <label>Emergency Contact</label>
    <type>Text</type>
    <length>255</length>
    <description>Name and contact details for the explorer&apos;s emergency contact person on Earth.</description>
    <inlineHelpText>Enter the name and phone/email of the person to contact in case of an emergency on the lunar surface.</inlineHelpText>
</CustomField>