force-app/main/default/objects/Lunar_Explorer__c/fields/EVA_Hours__c.field-meta.xml
<CustomField>
    <fullName>EVA_Hours__c</fullName>
    <label>EVA Hours</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>1</scale>
    <defaultValue>0</defaultValue>
    <description>Total cumulative extravehicular activity (EVA) hours logged by this explorer across all missions.</description>
    <inlineHelpText>Total hours of extravehicular activity experience. Used to determine eligibility for advanced expeditions.</inlineHelpText>
</CustomField>