force-app/main/default/objects/Lunar_Explorer__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Full legal name of the lunar explorer.</description>
    <inlineHelpText>Enter the explorer&apos;s full legal name as it appears on their mission ID.</inlineHelpText>
</CustomField>