force-app/main/default/objects/Lunar_Explorer__c/fields/Medical_Clearance_Date__c.field-meta.xml
<CustomField>
    <fullName>Medical_Clearance_Date__c</fullName>
    <label>Medical Clearance Date</label>
    <type>Date</type>
    <description>Date of the most recent medical clearance approval for low-gravity EVA activity. Must be current for all active bookings.</description>
    <inlineHelpText>Date the explorer last received medical clearance for lunar EVA. Clearance expires after 12 months.</inlineHelpText>
</CustomField>